# modorganizer-bsapacker

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  appveyor.yml
.github/workflows/: c-cpp.yml
cmake/: FindDirectXTex.cmake
include/bsapacker/: ArchiveAutoService.h  ArchiveBuildDirector.h  ArchiveBuilderFactory.h  ArchiveBuilderHelper.h  GeneralArchiveBuilder.h  IArchiveAutoService.h  IArchiveBuilder.h  IArchiveBuilderFactory.h  IArchiveBuilderHelper.h  IArchiveExtensionService.h  IArchiveNameService.h  IDummyPluginLogic.h  IDummyPluginService.h  IDummyPluginServiceFactory.h  IEmitsValueChanged.h  IFileWriterService.h  IModDto.h  IModDtoFactory.h  IModDtoProcessService.h  IPackerDialog.h  IPackerDialogFactory.h  IPackerProgressDialog.h  IPackerProgressDialogFactory.h  ISettingsService.h  ModDtoFactory.h  NullArchiveBuilder.h  PackerProgressDialogFactory.h  TextureArchiveBuilder.h  TexturelessArchiveBuilder.h
include/qlibbsarch/: BSArchive.h  QLibbsarch.h
lib/: DirectXTex.lib  libbsarch.lib
src/: ArchiveAutoService.cpp  ArchiveBuildDirector.cpp  ArchiveBuilderFactory.cpp  ArchiveBuilderHelper.cpp  ArchiveExtensionService.cpp  ArchiveExtensionService.h  ArchiveNameService.cpp  ArchiveNameService.h  BSArchive.cpp  BSArchiveAuto.cpp  BSArchiveEntries.cpp  BsaPacker.cpp  BsaPacker.h  BsaPackerWorker.cpp  BsaPackerWorker.h  CMakeLists.txt  DummyPluginLogic.cpp  DummyPluginLogic.h  DummyPluginServiceFactory.cpp  DummyPluginServiceFactory.h  Fallout3DummyPluginService.cpp  Fallout3DummyPluginService.h  Fallout4DummyPluginService.cpp  Fallout4DummyPluginService.h  FileWriterService.cpp  FileWriterService.h  GeneralArchiveBuilder.cpp  HideLooseAssetService.cpp  HideLooseAssetService.h  ModContext.cpp  ModContext.h  ModDto.cpp  ModDto.h  ModDtoFactory.cpp  ModDtoProcessService.cpp  ModDtoProcessService.h  NewVegasDummyPluginService.cpp  NewVegasDummyPluginService.h  NexusId.h  NullArchiveBuilder.cpp  (+25 more)
src/bsapacker/: ArchiveAutoService.h  ArchiveBuildDirector.h  ArchiveBuilderFactory.h  ArchiveBuilderHelper.h  GeneralArchiveBuilder.h  IArchiveAutoService.h  IArchiveBuilder.h  IArchiveBuilderHelper.h  IArchiveNameService.h  IDummyPluginLogic.h  IDummyPluginServiceFactory.h  IEmitsValueChanged.h  IHideLooseAssetService.h  IModContext.h  IModDto.h  IModDtoFactory.h  IPackerDialog.h  ModDtoFactory.h  NullArchiveBuilder.h  TextureArchiveBuilder.h  TexturelessArchiveBuilder.h
tests/: ArchiveAutoServiceFacts.cpp  ArchiveBuilderFactoryFacts.cpp  ArchiveBuilderHelperFacts.cpp  ArchiveNameServiceFacts.cpp  BsaPackerFacts.cpp  BsaPackerWorkerFacts.cpp  CMakeLists.txt  DummyPluginServiceFactoryFacts.cpp  Fallout3DummyPluginServiceFacts.cpp  Fallout4DummyPluginServiceFacts.cpp  FileWriterServiceFacts.cpp  GeneralArchiveBuilderFacts.cpp  HideLooseAssetServiceFacts.cpp  MockArchiveAutoService.h  MockArchiveBuilderFactory.h  MockArchiveBuilderHelper.h  MockArchiveNameService.h  MockDummyPluginLogic.h  MockDummyPluginServiceFactory.h  MockFileWriterService.h  MockHideLooseAssetService.h  MockModContext.h  MockModDtoFactory.h  MockOrganizer.h  MockPackerDialog.h  MockSettingsService.h  ModContextFacts.cpp  ModDtoFactoryFacts.cpp  NewVegasDummyPluginService.cpp  NewVegasDummyPluginServiceFacts.cpp  OblivionDummyPluginServiceFacts.cpp  SkyrimDummyPluginServiceFacts.cpp  SkyrimSEDummyPluginServiceFacts.cpp  TextureArchiveBuilderFacts.cpp  TexturelessArchiveBuilderFacts.cpp
